<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">

    <TextView
        android:id="@+id/hc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/cardview_light_background"
        android:text="@string/hc"
        android:fontFamily="casual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="317dp"
        android:layout_height="50dp"
        android:background="@color/cardview_light_background"
        android:text="@string/nombre"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="60dp" />
    <EditText
        android:id="@+id/fecn"
        android:layout_width="317dp"
        android:layout_height="50dp"
        android:background="@color/cardview_light_background"
        android:text="@string/fecha"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="120dp" />
    <EditText
        android:id="@+id/sexo"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@color/cardview_light_background"
        android:text="Sexo"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="180dp" />
    <EditText
        android:id="@+id/edocivil"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:background="@color/cardview_light_background"
        android:text="Estado civil:"
        tools:layout_editor_absoluteX="220dp"
        tools:layout_editor_absoluteY="180dp" />
    <EditText
        android:id="@+id/edad"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@color/cardview_light_background"
        android:text="Edad"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="240dp" />
    <EditText
        android:id="@+id/area"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@color/cardview_light_background"
        android:text="@string/Area"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="300dp" />
    <Button
        android:id="@+id/area2"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="Buscar area"
        tools:layout_editor_absoluteX="230dp"
        tools:layout_editor_absoluteY="300dp"/>
    <EditText
        android:id="@+id/medico"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@color/cardview_light_background"
        android:text="@string/medico"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="360dp" />
    <Button
        android:id="@+id/medico2"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="Buscar medico"
        tools:layout_editor_absoluteX="230dp"
        tools:layout_editor_absoluteY="360dp"/>
    <Button
        android:id="@+id/generalb"
        android:layout_width="317dp"
        android:layout_height="50dp"
        android:text="@string/General"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="420dp"/>
    <Button
        android:id="@+id/AFb"
        android:layout_width="317dp"
        android:layout_height="50dp"
        android:text="@string/AF"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="480dp"/>
    <Button
        android:id="@+id/APPb"
        android:layout_width="317dp"
        android:layout_height="60dp"
        android:text="@string/APP"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="540dp"/>
    <Button
        android:id="@+id/APNPb"
        android:layout_width="317dp"
        android:layout_height="60dp"
        android:text="@string/APNP"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="610dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>